@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020190215"
-#define public MagickPackageReleaseDate "snapshot-20190215"
+#define public MagickPackageVersionAddendum ".020190216"
+#define public MagickPackageReleaseDate "snapshot-20190216"
